# nyc-tlc-analytics-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: pipeline_config.yaml
docs/: BUSINESS_INSIGHTS.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  MONITORING_AND_SCHEDULING.md  QUICK_START.md  README.md  VIRTUAL_ENV_GUIDE.md
scripts/: run_e2e.sh  run_pipeline.sh  run_sample.sh  run_tests.sh  setup.sh  start_prefect_ui.sh
sql/analytics/: 01_top_zones_by_revenue.sql  02_hourly_demand_patterns.sql  03_market_share_trends.sql  04_hvfhv_platform_economics.sql  05_pricing_comparison.sql  06_airport_trips_analysis.sql  07_weekend_vs_weekday.sql  08_shared_rides_analysis.sql  09_borough_comparison.sql  10_data_quality_summary.sql  11_uber_lyft_vs_taxi_pricing_by_zone_hour.sql  12_cbd_congestion_fee_impact.sql  13_hvfhv_take_rate_variance_analysis.sql  14_market_share_shift_vs_pricing.sql
sql/ddl/: 00_schema_reference.sql  01_raw_tables.sql  02_dimension_tables.sql  03_fact_tables.sql  04_aggregate_tables.sql
src/: __init__.py  cli.py  config.py  utils.py
src/database/: __init__.py  connection.py  loader.py  schema.py  schema_drift.py
src/ingestion/: __init__.py  downloader.py  validators.py
src/orchestration/: __init__.py  flows.py
src/transformations/: __init__.py  aggregations.py  quality_checks.py  standardize.py
tests/: __init__.py  conftest.py  test_database_connection.py  test_quality_checks.py  test_transformations.py  test_utils.py  test_validators.py
